  * the region and dimregion chooser widgets are now resizable
  * bugfix: sometimes you could not delete more than one dimension
  * filter headers are now also greyed out when the filter is inactive
  * autoconf fix: LS plugin dirs with digits in their prefix
    (e.g. "/usr/lib64/foo") are now resolved in relative dirs as well
    (show a warning when resolving the relative path failed)

Version 0.1.1 (2007-12-06)

  * multiple editor windows can now be opened by the plugin
  * bugfix: gigedit didn't start on windows 2000
  * standard gtk command line parameters is now handled
  * parameter edits can now be applied to multiple regions and
    dimension regions simultaneously - three checkboxes were added
    that select if changes apply to all regions and/or all dimension
    regions

Version 0.1.0 (2007-10-15)

  * fixed compilation with older gcc versions
  * added German translation
  * reworked instrument properties dialog - properties can now be
    edited
  * restructured dimension region editor for elements to be in a more
    logical and intuitive order
  * added Makefile.cvs (just for standard compliance with other projects)
  * added Debian packaging infrastructure
  * implemented sample loop editing
  * improved labels in dimension region editor
  * use normal layout for checkboxes
  * allow to resize dimension zones even when the respective dimension has
    no custom dimension splits yet
  * moved instrument editor into a shared library 'libgigedit', the 'gigedit'
    binary is now just calling that shared library
  * implemented an "instrument editor plugin" for LinuxSampler to allow
    on-the-fly instrument editing within the sampler's own process
    (revised directories to a more automake-friendly structure for this, to
    avoid compilation and install errors)
  * added experimental support to synchronize gigedit with LinuxSampler to
    avoid race conditions / crash while modifying data structures